# boringnix

./: .gitignore  Cargo.toml  flake.nix  readme.md
modules/: conduit.nix  conduwuit.nix  headscale.nix  nextcloud.nix  test.nix
src/: main.rs
static/: static.html
